{{$NEXT}}

1.2.5_01  2015-01-01 22:50:30 Europe/Rome
   - (hopefully) solving two issues in Windows testing

1.2.4     2014-12-29 03:38:12 Europe/Rome
   - release, no further changes

1.2.4_02  2013-08-04 02:43:05 Europe/Rome
   - made test of %r and %R more robust (hopefully)

1.2.4_01  2013-08-03 15:03:05 Europe/Rome
   - fixed %r and %R to use Time::HiRes when available and set
     time in milliseconds, with added tests (RT85490, thanks Dominique Faure)
   - documented %R (RT85490, thanks Dominique Faure)
   - added file_insecure, file_create and file_append options for
     new() and easy_init() (RT85852, thanks Pedro Davide Assunção)

1.2.3     2013-07-21 17:32:58 Europe/Rome
   - fixed documentation bug for LOGWARN
   - updated Copyright info (years)
   - fixed bug that made "%n" dependent on $/ variable instead
     of being equal to "\n" like in original Log::Log4perl. Thanks
     to clueless-newbie on GitHub
     (https://github.com/polettix/Log-Log4perl-Tiny/pull/3)

1.2.2     2013-04-23 01:42:51 Europe/Rome
   - fixed bugs in logdie & logwarn, now emitting output
     according to behaviour of "real" warn() and die()
   - fixed bugs in template expansion for some codes
   - exclude Log::Log4perl::Tiny from Carp's messages
   - all of the above thanks to Felix Li

1.2.1     2013-04-18 17:50:19 Europe/Rome
   - logwarn/LOGWARN no longer exit, aligning behaviour to what
     Log::Log4perl has today (thanks to Felix Li for this)

1.2.0     2012-10-13 11:07:35 Europe/Rome
   - added support for is_<<level>> and is<<Level>>Enabled by
     mindthemonkey on GitHub
     (https://github.com/polettix/Log-Log4perl-Tiny/pull/1)

1.1.2     2011-12-28 10:19:59 Europe/Rome
   - reverting to previous release numbering scheme... hopefully

v1.1.1    2011-12-28 09:28:29 Europe/Rome
   - release after bugfix

1.1.0_01  2011-11-17 02:29:44 Europe/Rome
   - solved bug https://rt.cpan.org/Ticket/Display.html?id=72476
     (thanks to Jonathan Wilson for pointing out)
